# qwen3-tts-onnxruntime

./: .gitignore  README.md  build_cpp.py  export_onnx.py  quantization.py  requirements.txt  test_base_clone_stream_and_nonstream.py  test_custom_voice_stream_and_nonstream.py  test_voice_design_stream_and_nonstream.py
cpp/: CMakeLists.txt
cpp/apps/: clone_fixture_main.cc  qwen3tts_clone_main.cc  qwen3tts_examples_main.cc
cpp/cmake/: OnnxRuntime.cmake
cpp/include/qwen3tts/: audio_frontend.h  bpe_tokenizer.h  build_config.h.in  clone_pipeline.h  npy.h  ort_runner.h  product_clone_runtime.h  qwen_model.h  sampler.h  tensor.h  wav_writer.h
cpp/scripts/: download_deps.sh
cpp/src/: audio_frontend.cc  bpe_tokenizer.cc  clone_pipeline.cc  npy.cc  ort_runner.cc  product_clone_runtime.cc  qwen_model.cc  sampler.cc  tensor.cc  wav_writer.cc
export/: codec_embed_export.py  speaker_encoder_export.py  sub_talker_sample_export.py  talker_core_export.py  talker_export_utils.py  text_project_export.py  tokenizer_export.py
scripts/: compare_cpp_clone_fixture.py  dump_cpp_clone_fixture.py  run_cpp_clone_fixture_test.sh
src/: OnnxSessionRunner.py  audio.py  builders.py  custom_model.py  design_model.py  models.py  sampling.py
